snapshots/truth__resolve__tests__call_of_undefined_func.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    missingFunc(missingVar);\n}\"#,\n                                 \"unknown\").trim()"
---
error: unknown ECL instruction or function 'missingFunc'
  ┌─ <input>:2:5
  │
2 │     missingFunc(missingVar);
  │     ^^^^^^^^^^^ not found in this scope

error: unknown ECL register or variable 'missingVar'
  ┌─ <input>:2:17
  │
2 │     missingFunc(missingVar);
  │                 ^^^^^^^^^^ not found in this scope
